--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -4,10 +4,10 @@ FROM openjdk:8-jdk-alpine
 WORKDIR /app
 
 # 复制文件到镜像中
-COPY ./mytool.jar /tmp/mytool.jar
+COPY ./mytool.jar /app/mytool.jar
 
 # 暴露端口
 EXPOSE 18080
 
 # 指定容器启动时运行的指令
-ENTRYPOINT ["java", "-jar", "/tmp/mytool.jar"]
+ENTRYPOINT ["java", "-jar", "/app/mytool.jar"]
